--- a/blog.html
+++ b/blog.html
@@ -1,1 +1,91 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>KillZone FX Blog</title>
+<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+<header class="header">
+  <div class="logo">KillZone FX</div>
+  <nav>
+    <div class="hamburger" id="hamburger">&#9776;</div>
+    <div class="nav-menu" id="nav-menu">
+      <a href="index.html">Home</a>
+         <a href="beginner-guide.html">Beginner's Guide</a>
+      <a href="about.html">About</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="terms.html">Terms & Conditions</a>
+   
+      <a href="blog.html" class="active">Blog</a>
+    </div>
+  </nav>
+  <button id="themeToggle">🌙 Dark Mode</button>
+</header>
+
+<main style="max-width:900px; margin:auto; padding:20px; line-height:1.7;">
+  <h1>KillZone FX Blog</h1>
+  <p>Welcome to the KillZone FX Blog! Here you’ll find in-depth articles, trading strategies, tips, and market analysis to help you improve your Forex trading skills and stay updated with market trends.</p>
+
+  <!-- Blog Post 1 -->
+  <article class="blog-post">
+    <h2>Understanding Forex Trading Sessions: Sydney, Tokyo, London, and New York</h2>
+    <p>Forex trading happens 24 hours a day across the world, but not all hours are created equal. Each financial hub—Sydney, Tokyo, London, and New York—has unique characteristics, and understanding their session times is essential for traders of all levels.</p>
+    <p>The Sydney session kicks off the Forex trading day. Liquidity is lower, but it can be ideal for certain currency pairs like AUD and NZD. The Tokyo session overlaps slightly with Sydney and introduces more activity, especially in pairs like USD/JPY. London is the largest Forex market in the world, with huge liquidity and volatility, particularly during the London-New York overlap. New York is the final major session, often characterized by strong movements in USD pairs.</p>
+    <p>Trading during session overlaps, especially London-New York, is generally recommended for traders seeking higher liquidity and tighter spreads. Understanding each session’s characteristics helps in planning entry and exit strategies, managing risks, and timing trades effectively.</p>
+    <p>By tracking sessions with tools like KillZone FX, traders can anticipate market activity, understand volatility patterns, and align their trading strategies with peak trading hours. This knowledge is invaluable for both short-term traders and long-term investors.</p>
+    <p>... [content continues for ~600 words]</p>
+  </article>
+
+  <!-- Blog Post 2 -->
+  <article class="blog-post">
+    <h2>Top 10 Forex Trading Mistakes Beginners Should Avoid</h2>
+    <p>Forex trading can be exciting and profitable, but beginners often make mistakes that lead to losses. Identifying and avoiding these mistakes is critical for long-term success. Here are ten common pitfalls:</p>
+    <ul>
+      <li>Trading without a plan or strategy.</li>
+      <li>Overleveraging and taking excessive risks.</li>
+      <li>Ignoring risk management techniques like stop-loss orders.</li>
+      <li>Trading based on emotions rather than analysis.</li>
+      <li>Failing to understand the market session dynamics.</li>
+      <li>Chasing losses instead of evaluating mistakes.</li>
+      <li>Neglecting economic news and fundamental analysis.</li>
+      <li>Overtrading or trading too frequently.</li>
+      <li>Using untested strategies on live accounts.</li>
+      <li>Ignoring continuous learning and adaptation.</li>
+    </ul>
+    <p>By carefully avoiding these mistakes, beginner traders can improve their chances of success. Combining session analysis, risk management, and education—like the resources on KillZone FX—will set the foundation for profitable trading habits.</p>
+    <p>Remember, Forex trading is a journey, not a sprint. Patience, discipline, and knowledge are key to becoming a successful trader. Regularly reading blogs, following economic events, and practicing with demo accounts can significantly improve your skills.</p>
+    <p>... [content continues for ~700 words]</p>
+  </article>
+
+  <!-- Blog Post 3 -->
+  <article class="blog-post">
+    <h2>How to Use Economic Events to Improve Forex Trading Decisions</h2>
+    <p>Economic events, such as interest rate decisions, employment reports, GDP releases, and central bank announcements, play a crucial role in Forex trading. Traders who understand and interpret these events can gain a significant advantage.</p>
+    <p>For example, a stronger-than-expected employment report can boost a country’s currency, while weaker GDP growth may lead to depreciation. By monitoring economic calendars and knowing which events are high-impact, traders can prepare for market volatility and plan trades accordingly.</p>
+    <p>KillZone FX provides a detailed economic calendar with filters for currency and importance, helping traders focus on the most relevant events. Using these insights, you can align trades with potential market movements, avoid unexpected risks, and capitalize on opportunities.</p>
+    <p>Integrating fundamental analysis from economic events with technical tools, like session charts and trend analysis, creates a well-rounded trading strategy. Over time, this approach helps traders reduce losses, increase confidence, and improve decision-making.</p>
+    <p>... [content continues for ~800 words]</p>
+  </article>
+
+</main>
+
+<footer>
+  <a href="privacy.html">Privacy</a> | 
+  <a href="terms.html">Terms</a> | 
+  <a href="about.html">About</a> | 
+  <a href="blog.html" class="active">Blog</a>
+</footer>
+
+<script>
+// Hamburger menu toggle
+const hamburger = document.getElementById('hamburger');
+const navMenu = document.getElementById('nav-menu');
+hamburger.addEventListener('click', () => {
+    navMenu.classList.toggle('show');
+});
+</script>
+</body>
+</html>
 
