--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <a href="privacy.html">Privacy</a>
       <a href="contact.html">Contact</a>
       <a href="terms.html">Terms & Conditions</a>
+       <a href="blog.html" class="active">Blog</a>
     </div>
   </nav>
   <button id="themeToggle">🌙 Dark Mode</button>
@@ -136,6 +137,7 @@
 <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
