--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
     <a href="privacy.html">Privacy</a>
     <a href="contact.html">Contact</a>
      <a href="terms.html">Terms & Conditions</a>
+     <a href="blog.html" class="active">Blog</a>
   </nav>
 </header>
 
