--- a/beginner-guide.html
+++ b/beginner-guide.html
@@ -17,6 +17,7 @@
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy</a>
          <a href="terms.html">Terms & Conditions</a>
+       <a href="blog.html" class="active">Blog</a>
     </div>
   </nav>
   <button id="themeToggle">🌙 Dark Mode</button>
