--- a/privacy.html
+++ b/privacy.html
@@ -17,6 +17,7 @@
       <a href="about.html">About</a>
       <a href="privacy.html" class="active">Privacy</a>
         <a href="terms.html">Terms & Conditions</a>
+       <a href="blog.html" class="active">Blog</a>
     </div>
   </nav>
   <button id="themeToggle">🌙 Dark Mode</button>
@@ -91,4 +92,5 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
