--- a/beginner-guide.html
+++ b/beginner-guide.html
@@ -12,11 +12,12 @@
   <nav>
     <div class="hamburger" id="hamburger">&#9776;</div>
     <div class="nav-menu" id="nav-menu">
-      <a href="index.html">Home</a>
-      <a href="beginner-guide.html" class="active">Trading Guide</a>
+      <a href="index.html"">Home</a>
+     <a href="beginner-guide.html" class="active>Beginner's Guide</a>
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy</a>
-         <a href="terms.html">Terms & Conditions</a>
+      <a href="contact.html">Contact</a>
+      <a href="terms.html">Terms & Conditions</a>
        <a href="blog.html" class="active">Blog</a>
     </div>
   </nav>
