--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
 <header class="header">
   <div class="logo">KillZone FX</div>
   <nav class="nav-menu">
-    <a href="index.html">Home</a>
+        <a href="index.html">Home</a>
      <a href="beginner-guide.html">Beginner's Guide</a>
-    <a href="about.html">About</a>
-    <a href="privacy.html">Privacy</a>
-    <a href="contact.html">Contact</a>
-     <a href="terms.html">Terms & Conditions</a>
-     <a href="blog.html" class="active">Blog</a>
+      <a href="about.html">About</a>
+      <a href="privacy.html">Privacy</a>
+      <a href="contact.html" class="active">Contact</a>
+      <a href="terms.html">Terms & Conditions</a>
+       <a href="blog.html">Blog</a>
   </nav>
 </header>
 
