--- a/terms.html
+++ b/terms.html
@@ -12,12 +12,13 @@
   <nav>
     <div class="hamburger" id="hamburger">&#9776;</div>
     <div class="nav-menu" id="nav-menu">
-      <a href="index.html">Home</a>
-      <a href="beginner-guide.html">Beginner's Guide</a>
+          <a href="index.html">Home</a>
+     <a href="beginner-guide.html">Beginner's Guide</a>
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy</a>
-      <a href="terms.html" class="active">Terms</a>
-       <a href="blog.html" class="active">Blog</a>
+      <a href="contact.html">Contact</a>
+      <a href="terms.html" class="active">Terms & Conditions</a>
+       <a href="blog.html">Blog</a>
     </div>
   </nav>
   <button id="themeToggle">🌙 Dark Mode</button>
@@ -86,5 +87,6 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
