--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
   <p>We are committed to continuously improving KillZone FX. We listen to user feedback, update tools and resources, and strive to provide the best possible experience for our visitors. Our commitment is to transparency, accuracy, and usability, so you can trust our platform for your trading journey.</p>
 
   <h2>Get Involved</h2>
-  <p>We encourage our users to provide feedback, share ideas, and participate in our community. Whether you are a beginner looking to learn or an experienced trader seeking reliable tools, KillZone FX is built for you. You can contact us anytime via email at <a href="mailto:support@killzonefx.netlify.app">support@killzonefx.netlify.app</a> for questions, suggestions, or support.</p>
+  <p>We encourage our users to provide feedback, share ideas, and participate in our community. Whether you are a beginner looking to learn or an experienced trader seeking reliable tools, KillZone FX is built for you. You can contact us anytime via email at <a href="mailto:contact.killzonefx@gmail.com">contact.killzonefx@gmail.com</a> for questions, suggestions, or support.</p>
 
   <h2>Conclusion</h2>
   <p>KillZone FX is more than just a tool — it is a learning and trading hub designed to simplify Forex trading, educate users, and provide real-time market information. Our goal is to help you trade smarter, understand market dynamics, and build confidence in your trading journey.</p>
@@ -83,4 +83,5 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
