--- a/privacy.html
+++ b/privacy.html
@@ -75,7 +75,7 @@
   <p>We may update this Privacy Policy from time to time. Updates will be posted on this page with a new effective date. We encourage you to review this page periodically to stay informed about how we protect your information.</p>
 
   <h2>9. Contact Us</h2>
-  <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at: <a href="mailto:support@killzonefx.netlify.app">support@killzonefx.netlify.app</a></p>
+  <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at: <a href="mailto:contact.killzonefx@gmail.com">contact.killzonefx@gmail.com</a></p>
 </main>
 
 <footer>
@@ -93,6 +93,7 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
