--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 <h1>Contact KillZone FX</h1>
 <p>If you have questions, suggestions, or feedback, you can reach out to us using the form below:</p>
 
-<form action="mailto:youremail@example.com" method="post" enctype="text/plain">
+<form action="mailto:contact.killzonefx@gmail.com" method="post" enctype="text/plain">
   <label>Name:</label><br>
   <input type="text" name="name" required><br><br>
   <label>Email:</label><br>
