--- a/terms.html
+++ b/terms.html
@@ -67,7 +67,7 @@
   <p>These Terms & Conditions are governed by the laws of India. Any disputes arising from the use of this website shall be subject to the exclusive jurisdiction of courts in India.</p>
 
   <h2>11. Contact Information</h2>
-  <p>If you have any questions or concerns regarding these Terms & Conditions, please contact us at: <a href="mailto:support@killzonefx.netlify.app">support@killzonefx.netlify.app</a></p>
+  <p>If you have any questions or concerns regarding these Terms & Conditions, please contact us at: <a href="mailto:contact.killzonefx@gmail.com">contact.killzonefx@gmail.com</a></p>
 
   <p><strong>By using KillZone FX, you acknowledge that you have read, understood, and agree to these Terms & Conditions.</strong></p>
 </main>
@@ -87,6 +87,7 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
