--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
       <a href="terms.html">Terms & Conditions</a>
        <a href="blog.html">Blog</a>
   </nav>
+   <button id="themeToggle">🌙 Dark Mode</button>
 </header>
 
 <h1>Contact KillZone FX</h1>
