--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   </nav>
    <button id="themeToggle">🌙 Dark Mode</button>
 </header>
-
+<main style="max-width:900px; margin:auto; padding:20px; line-height:1.7;">
 <h1>Contact KillZone FX</h1>
 <p>If you have questions, suggestions, or feedback, you can reach out to us using the form below:</p>
 
