--- a/terms.html
+++ b/terms.html
@@ -73,8 +73,10 @@
 </main>
 
 <footer>
-  <a href="privacy.html">Privacy</a> | 
-  <a href="terms.html" class="active">Terms</a>
+   <a href="privacy.html" style="color:grey;">Privacy</a> |
+  <a href="disclaimer.html" style="color:grey;">Disclaimer</a> |
+  <a href="terms.html" style="color:grey;">Terms</a> |
+  <a href="contact.html" style="color:grey;">Contact</a>
 </footer>
 
 <script>
@@ -87,6 +89,7 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
