--- a/privacy.html
+++ b/privacy.html
@@ -79,8 +79,10 @@
 </main>
 
 <footer>
-  <a href="privacy.html" class="active">Privacy</a> | 
-  <a href="terms.html">Terms</a>
+   <a href="privacy.html" style="color:grey;">Privacy</a> |
+  <a href="disclaimer.html" style="color:grey;">Disclaimer</a> |
+  <a href="terms.html" style="color:grey;">Terms</a> |
+  <a href="contact.html" style="color:grey;">Contact</a>
 </footer>
 
 <script>
@@ -93,6 +95,7 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
