--- a/beginner-guide.html
+++ b/beginner-guide.html
@@ -102,8 +102,10 @@
 </main>
 
 <footer>
-  <a href="privacy.html">Privacy</a> | 
-  <a href="terms.html">Terms</a>
+  <a href="privacy.html" style="color:grey;">Privacy</a> |
+  <a href="disclaimer.html" style="color:grey;">Disclaimer</a> |
+  <a href="terms.html" style="color:grey;">Terms</a> |
+  <a href="contact.html" style="color:grey;">Contact</a>
 </footer>
 
 <script src="js/script.js"></script>
