--- a/about.html
+++ b/about.html
@@ -68,9 +68,10 @@
 </main>
 
 <footer>
-  <a href="privacy.html">Privacy</a> | 
-  <a href="terms.html">Terms</a> | 
-  <a href="about.html" class="active">About</a>
+  <a href="privacy.html" style="color:grey;">Privacy</a> |
+  <a href="disclaimer.html" style="color:grey;">Disclaimer</a> |
+  <a href="terms.html" style="color:grey;">Terms</a> |
+  <a href="contact.html" style="color:grey;">Contact</a>
 </footer>
 
 <script>
@@ -83,5 +84,6 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
