--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8587197885982135" crossorigin="anonymous"></script>
 
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8VX138GZRQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8VX138GZRQ');
+</script>
+  
 <body>
 <header class="header">
   <div class="logo">KillZone FX</div>
@@ -145,6 +155,7 @@
 
 </body>
 </html>
+
 
 
 
