--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>About KillZone FX</title>
 <link rel="stylesheet" href="css/style.css">
+  
+<link rel="icon" sizes="32x32" href="icon-192.png">
+<link rel="icon" sizes="16x16" href="icon-192.png">
+<link rel="apple-touch-icon" href="icon-192.png">
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
 <header class="header">
@@ -84,6 +89,7 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
