--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Contact – KillZone FX</title>
 <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" sizes="32x32" href="icon-192.png">
+<link rel="icon" sizes="16x16" href="icon-192.png">
+<link rel="apple-touch-icon" href="icon-192.png">
+<link rel="manifest" href="manifest.json">
 </head>
 <body>
 
