--- a/disclaimer.html
+++ b/disclaimer.html
@@ -9,6 +9,10 @@
 <meta name="robots" content="index, follow">
 
 <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" sizes="32x32" href="icon-192.png">
+<link rel="icon" sizes="16x16" href="icon-192.png">
+<link rel="apple-touch-icon" href="icon-192.png">
+<link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -55,3 +59,4 @@ damages, or decisions made based on information from this website.
 
 </body>
 </html>
+
