--- a/disclaimer.html
+++ b/disclaimer.html
@@ -14,7 +14,15 @@
 <link rel="apple-touch-icon" href="icon-192.png">
 <link rel="manifest" href="manifest.json">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8VX138GZRQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-8VX138GZRQ');
+</script>
 <body>
 
 <h1>Disclaimer</h1>
@@ -59,4 +67,5 @@ damages, or decisions made based on information from this website.
 
 </body>
 </html>
+
 
