--- a/beginner-guide.html
+++ b/beginner-guide.html
@@ -21,7 +21,7 @@
 
   gtag('config', 'G-8VX138GZRQ');
 </script>
-  
+  <script src="https://pl28500200.effectivegatecpm.com/e2/47/8c/e2478cf528ebe8c7ff2fded40df79a26.js"></script>
 <body>
 <header class="header">
   <div class="logo">KillZone FX</div>
