--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <link rel="manifest" href="manifest.json">
 <link rel="stylesheet" href="css/style.css">
 
-<!-- Google AdSense -->
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8587197885982135" crossorigin="anonymous"></script>
+<script src="https://superioroptionaleveryone.com/e2/47/8c/e2478cf528ebe8c7ff2fded40df79a26.js"></script>
 
 </head>
 <!-- Google tag (gtag.js) -->
@@ -156,6 +155,7 @@
 <script src="https://pl28501169.effectivegatecpm.com/d5/6a/d0/d56ad0a64d66e22d21f5b023b303d116.js"></script>
 </body>
 </html>
+
 
 
 
