--- a/index.html
+++ b/index.html
@@ -152,9 +152,10 @@
     });
   });
 </script>
-<script src="https://pl28501169.effectivegatecpm.com/d5/6a/d0/d56ad0a64d66e22d21f5b023b303d116.js"></script>
+<script src="https://superioroptionaleveryone.com/d5/6a/d0/d56ad0a64d66e22d21f5b023b303d116.js"></script>
 </body>
 </html>
+
 
 
 
