--- a/index.html
+++ b/index.html
@@ -89,7 +89,10 @@
 
 <div id="timeline"></div>
 <div id="now-label" style="position:absolute; top:-20px; color:#f85149; font-size:12px;"></div>
-
+<!-- ADSTERRA -->
+  <script async="async" data-cfasync="false" src="https://superioroptionaleveryone.com/e6e2c8c66ca125572a04afbd0f49f38d/invoke.js"></script>
+<div id="container-e6e2c8c66ca125572a04afbd0f49f38d"></div>
+  
 <h2>📅 Today's Major Economic Events</h2>
 <div id="economic-calendar-container" style="background-color: #21262d; border-radius: 12px; padding: 10px;">
   <div class="tradingview-widget-container">
@@ -155,6 +158,7 @@
 <script src="https://superioroptionaleveryone.com/d5/6a/d0/d56ad0a64d66e22d21f5b023b303d116.js"></script>
 </body>
 </html>
+
 
 
 
