--- a/index.html
+++ b/index.html
@@ -74,6 +74,17 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 
+<script>
+  atOptions = {
+    'key' : 'f570646816abdaa26e9da653b14ccc90',
+    'format' : 'iframe',
+    'height' : 90,
+    'width' : 728,
+    'params' : {}
+  };
+</script>
+<script src="https://superioroptionaleveryone.com/f570646816abdaa26e9da653b14ccc90/invoke.js"></script>
+  
 <h2>Live Forex Sessions</h2>
 <button id="toggleTime" style="background:orange; color:black">Show Local Time</button>
 <button id="shareBtn" style="background:#19bbff; color:black">Share</button>
@@ -158,6 +169,7 @@
 <script src="https://superioroptionaleveryone.com/d5/6a/d0/d56ad0a64d66e22d21f5b023b303d116.js"></script>
 </body>
 </html>
+
 
 
 
