--- a/index.html
+++ b/index.html
@@ -133,16 +133,32 @@
 </footer>
 
 <script src="js/script.js"></script>
-  <script>
-  document.querySelectorAll(".faq-question").forEach((btn) => {
-    btn.addEventListener("click", () => {
-      btn.parentElement.classList.toggle("active");
+
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const faqItems = document.querySelectorAll(".faq-item");
+
+    faqItems.forEach(item => {
+      const question = item.querySelector(".faq-question");
+      
+      question.addEventListener("click", () => {
+        // Close any open FAQ except the current one
+        faqItems.forEach(i => {
+          if (i !== item) i.classList.remove("active");
+        });
+
+        // Toggle current
+        item.classList.toggle("active");
+      });
     });
   });
 </script>
 
+  
 </body>
 </html>
+
 
 
 
