--- a/contact.html
+++ b/contact.html
@@ -37,16 +37,14 @@
 <main style="max-width:900px; margin:auto; padding:20px; line-height:1.7;">
 <h1>Contact KillZone FX</h1>
 <p>If you have questions, suggestions, or feedback, you can reach out to us using the form below:</p>
-<form action="send_email.php" method="post">
+
+<form action="mailto:contact.killzonefx@gmail.com" method="post" enctype="text/plain">
   <label>Name:</label><br>
   <input type="text" name="name" required><br><br>
-  
   <label>Email:</label><br>
   <input type="email" name="email" required><br><br>
-  
   <label>Message:</label><br>
   <textarea name="message" rows="5" required></textarea><br><br>
-  
   <input type="submit" value="Send" style="background:#19bbff; color:black; padding:8px 15px; border:none; border-radius:5px;">
 </form>
 
@@ -59,4 +57,3 @@
 
 </body>
 </html>
-
