--- a/about.html
+++ b/about.html
@@ -12,6 +12,16 @@
 <link rel="manifest" href="manifest.json">
 </head>
 <body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8VX138GZRQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8VX138GZRQ');
+</script>
+  
 <header class="header">
   <div class="logo">KillZone FX</div>
   <nav>
@@ -89,6 +99,7 @@ hamburger.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
 
 
 
