--- a/beginner-guide.html
+++ b/beginner-guide.html
@@ -66,7 +66,17 @@
     <li><strong>New York Session:</strong> Major USD activity, high volatility, especially during London overlap.</li>
   </ul>
   <p><strong>KillZone / Overlaps:</strong> When two sessions overlap, the market experiences higher liquidity and tighter spreads, offering prime trading opportunities.</p>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8587197885982135"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-8587197885982135"
+     data-ad-slot="1101800733"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <h2>Basic Forex Concepts</h2>
   <ul>
     <li><strong>Pips:</strong> Smallest unit of price movement. Example: EUR/USD moves 1.1000 → 1.1005 = 5 pips.</li>
