--- a/index.html
+++ b/index.html
@@ -77,7 +77,18 @@
 <div id="timeline"></div>
 <div id="now-label" style="position:absolute; top:-20px; color:#f85149; font-size:12px;"></div>
 
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8587197885982135"
+     crossorigin="anonymous"></script>
+<!-- Displayy -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8587197885982135"
+     data-ad-slot="5582642235"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 <h2>📅 Today's Major Economic Events</h2>
 <div id="economic-calendar-container" style="background-color: #21262d; border-radius: 12px; padding: 10px;">
   <div class="tradingview-widget-container">
@@ -158,6 +169,7 @@
   
 </body>
 </html>
+
 
 
 
